--- a/05. Top 5 Buttons/btn4/index.html
+++ b/05. Top 5 Buttons/btn4/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Bg-Text</title>
+    <title>Button 4</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="heading">EDILSON PAUL</h1>
+    <section class="container">
+        <button class="btn">Learn More</button>
+    </section>
 </body>
 </html>
